spacing fixes

--- a/style.css
+++ b/style.css
@@ -52,8 +52,12 @@ body {
 
 #slide-1 h4 {
   text-align: center;
-  -webkit-margin-before: .80em;
-  -webkit-margin-after: .80em;
+  -webkit-margin-before: .30em;
+  -webkit-margin-after: .30em;
+}
+
+#slide hr {
+  margin: 2.0em 0 2.0em 0;
 }
 
 #slide-1 p {
